7-kubernetes/task4-network/task2-ingress/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: netology-learn
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: backend
      protocol: TCP
      port: 3000
      targetPort: 3000
