7-kubernetes/task4-network/task2-ingress/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: netology-learn
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: frontend
      protocol: TCP
      port: 80
      targetPort: 80
